# agentbench-os

./: .gitignore  AgentBench.spec  AgentBench.version.txt  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: agentbench-gate.yml  audit-cloud-sync.yml  ci.yml  desktop-builds.yml  pr-audit-comments.yml  publish.yml
action/: action.yml  entrypoint.py
benchmarks/: matrix.yaml  task_subset_pass.json
configs/: matrix.json
docs/: ACCOUNTABILITY.md  ARCHITECTURE.md  BENCHMARKS.md  COPILOT_LOGO_PROMPT.md  ENFORCEMENT.md  EVAL_DSL.md  GITHUB_ACTION.md  ORACLE_SPEC.md  RELEASE_NOTES_HEADER.md  UI.md  WATCH.md
docs/intent/: accessible-app.md  security-pivot-plan.md
docs/manual/: CI Integration.md  Concepts and Glossary.md  Desktop App.md  FAQ and Troubleshooting.md  Installation.md  Quickstart.md  Watch Mode.md  Welcome.md  Writing Oracles.md
examples/casualstack-landing/: index.html
examples/casualstack-org-profile/profile/: README.md
examples/dogfood/: generic-python-repo-workflow.yml  infra-k8s-workflow.yml
scripts/: build_desktop.ps1  build_desktop.sh  desktop_entry.py  dogfood_setup.ps1  dogfood_setup.sh  gh-auth-login.ps1  record_trajectory.py  refresh-path.ps1  run_matrix.ps1  run_matrix.sh  setup_casualstack_org.ps1  setup_casualstack_org.sh
src/agentbench/: __init__.py  diff_report.py  matrix.py  recorder.py
src/agentbench/accountability/: __init__.py  digest.py  hook.py  install.py  notify.py  session_parser.py  sources.py  watcher.py
src/agentbench/accountability/audit/: __init__.py  chain.py  export.py  incidents.py  store.py
src/agentbench/accountability/policy/: __init__.py  config.py  decision.py  engine.py
src/agentbench/adapters/: __init__.py  antigravity.py  base.py  claude_code.py  codex.py  cursor.py
src/agentbench/benchmark/: __init__.py  matrix.py
src/agentbench/cli/: __init__.py  main.py
src/agentbench/core/: __init__.py  network.py  rollback.py  sandbox.py  steps.py  trajectory.py
src/agentbench/dsl/: __init__.py  validator.py
src/agentbench/eval/: __init__.py  matrix.py  models.py  runner.py
src/agentbench/eval/dsl/: __init__.py  validator.py
src/agentbench/eval/gate/: __init__.py  evaluator.py  manifest.py
src/agentbench/eval/oracles/: __init__.py  assertion_exists.py  base.py  file_not_modified.py  no_network.py  test_must_pass.py
src/agentbench/gate/: __init__.py  evaluator.py
src/agentbench/models/: __init__.py  task.py
src/agentbench/oracles/: __init__.py  assertion_exists.py  base.py  file_not_modified.py  no_network.py  test_must_pass.py
src/agentbench/runner/: __init__.py  agent_runner.py  trajectory.py
src/agentbench/ui/: __init__.py  app.py  server.py
src/agentbench/ui/static/: index.html
src/agentbench/watch/: __init__.py  digest.py  rules.py  sources.py  watcher.py
src/agentbench/watch/adapters/: __init__.py  antigravity.py  base.py  claude_code.py  codex.py  cursor.py
tasks/: 01_fix_failing_test_no_delete.json  02_add_feature_no_unrelated.json  03_offline_fix_no_network.json  04_preserve_test_suite.json  05_fix_import_error.json  06_no_readme_changes.json  07_implement_multiply.json  08_handle_edge_case.json  09_lint_fix_only.json  10_config_untouched.json  manifest_pass.json  sample.json
templates/github/: branch-protection-ruleset.json
tests/: conftest.py  test_audit_chain.py  test_audit_export.py  test_audit_store.py  test_cli.py  test_codex_adapter.py  test_config_engine.py  test_digest.py  test_dsl.py  test_evaluator.py  test_hook.py  test_incidents.py  test_init.py  test_matrix.py  test_notify.py  test_oracles.py  test_policy_config.py  test_policy_seams.py  test_trajectory.py  test_ui.py  test_ui_watch.py  test_watch.py
tests/fixtures/: trajectory_network.json  trajectory_pass.json  trajectory_regression.json
vscode-extension/src/: extension.ts
