[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentbench"
version = "0.1.0"
description = "Continuous agent reliability CI — property-based oracles for AI coding agent runs"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Casualstack" }]
keywords = ["ai-agents", "eval", "ci", "oracles", "coding-agents"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://casualstack.dev"
Repository = "https://github.com/casualstack/agentbench-os"
Documentation = "https://github.com/casualstack/agentbench-os#readme"

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=4.0"]
app = ["pywebview>=5.0"]

[project.scripts]
agentbench = "agentbench.cli.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/agentbench"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
