[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentbench"
dynamic = ["version"]
description = "Security & accountability for AI coding agents — watch what they do, keep a tamper-evident audit trail, and block risky actions before they run"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Casualstack" }]
keywords = [
    "ai-agents",
    "security",
    "accountability",
    "audit",
    "enforcement",
    "coding-agents",
    "claude-code",
    "eval",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Security",
]
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "rich",
    "docker>=6.0",
]

[project.urls]
Homepage = "https://casualstack.dev"
Repository = "https://github.com/casualstack/agentbench-os"
Documentation = "https://github.com/casualstack/agentbench-os#readme"

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=4.0"]
app = ["pywebview>=5.0"]
notify = ["plyer>=2.1"]

[project.scripts]
agentbench = "agentbench.cli.main:main"

[tool.hatch.version]
# Single source of truth for the version: src/agentbench/__init__.py.
path = "src/agentbench/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/agentbench"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
